# src/api/controllers/user.controller.js
@@ -4,6 +4,21 @@ function updateUser(req, res) {
   new UserService(req, res).updateUser();
 }
 
+function postUser(req, res) {
+  new UserService(req, res).postUser();
+}
+
+function getUsers(req, res) {
+  new UserService(req, res).getUsers();
+}
+
+function deleteUser(req, res) {
+  new UserService(req, res).deleteUser();
+}
+
 module.exports = {
-  updateUser
+  postUser,
+  getUsers,
+  updateUser,
+  deleteUser
 };
